Seasonal cleaning.  Added new info and removed old info.  Added some icons.  Made changes to appearance

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joss Duff</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   </head>
   <body>
@@ -28,43 +29,16 @@
               <a href="resources/resume.pdf">resume</a>
             </p>
         </div>
-        <div class="col-lg-1 center">
-
-        </div>
       </div>
     </div>
 
     <div class="container-md">
 
-      <h2 class="generalTitle">Token</h2>
-      <div class="container-fluid p-3 mb-5 bg-white rounded">
-        <script type="module" src="scripts/token.js"></script>
-        <div class="row shadow p-3">
-          <div class="col-lg-2 center">
-            <button onclick="myFunction()">Free JossToken</button>
-          </div>
-          <div class="col-lg-5 vertical">
-            <label for="name">Leave a message: (70 character limit)</label>
-            <input type="text" id="name" name="name" required minlength="1" maxlength="70" size="10">
-            <button onclick="myFunction()">Post message</button>
-          </div>
-          <div class="col-md">
-            <p class="noMargin bold"></p>
-            <ul class="noMargin">
-              <li><a href="https://rinkeby.etherscan.io/address/0x068964E433e3D35C68cbA901aF3eDd4776107CF1#code">
-                Contract on Etherscan</a></li>
-              <li>stuff ab jossToken</li>
-              <li>ok</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
       <h2 class="generalTitle">Education</h2>
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-2 center">
-            <img src="resources/LUcrest.png" alt="Lehigh University crest" class="icon">
+            <img src="resources/LUcrest.png" alt="Lehigh University crest" class="lehighcrest">
           </div>
           <div class="col-lg-3 vertical">
             <p class="role">Lehigh University</p>
@@ -77,114 +51,8 @@
               <li>Blockchain Concepts and Applications</li>
               <li>Database Systems and Applications</li>
               <li>Programming & Data Structures</li>
-              <li>Programming Languages</li>
               <li>Software Engineering</li>
               <li>Systems Software</li>
-              <li>Computer Organization and Architecture</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <h2 class="generalTitle">Experience</h2>
-
-      <div class="container-fluid p-3 mb-5 bg-white rounded">
-        <div class="row shadow p-3">
-          <div class="col-lg-2 center">
-            <img src="resources/LUcrest.png" alt="Lehigh University crest" class="icon">
-          </div>
-          <div class="col-lg-3 vertical">
-            <p class="role">Software Developer</p>
-            <p class="companyTitle">Lehigh University</p>
-            <p class="date">January 2020 - September 2020</p>
-          </div>
-          <div class="col-md">
-            <ul class="noMargin">
-              <li>Small undergraduate team lead by Lehigh's Dr. Brian Chen to create a graphic user interface for remote control and viewing of electron microscopes</li>
-              <li>Leader of a four person team this past summer assigned with the task of implementing a custom Python library developed by the manufacturer of Lehigh's electron microscope into our existing website</li>
-              <li>Frontend polishing and light server maintenance</li>
-              <li>Paid internship over the summer (40 hours/week).  Non-paid internship during the academic year (10 hours/week)</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="container-fluid p-3 mb-5 bg-white rounded">
-        <div class="row shadow p-3">
-          <div class="col-lg-2 center">
-            <img src="resources/tiel.png" alt="Tiel" class="icon">
-          </div>
-          <div class="col-lg-3 vertical">
-            <p class="role">Full Stack Developer</p>
-            <p class="companyTitle">Tiel Incorporated</p>
-            <p class="date">May 2020 - September 2020</p>
-          </div>
-          <div class="col-md">
-            <ul class="noMargin">
-              <li>Small startup creating solution for game developers to seamlessly interface in game items with the Ethereum blockchain</li>
-              <li>Utilized modern best practices to construct highly-scalable API solutions on AWS using the Serverless framework and DynamoDB</li>
-              <li>Learned about and interfaced with the Ethereum blockchain as a long-term persistence layer for applications</li>
-              <li>Communicated with and worked as part of a broader engineering team using a full PR-based monorepo workflow to continuously deploy our solution</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="container-fluid p-3 mb-5 bg-white rounded">
-        <div class="row shadow p-3">
-          <div class="col-lg-2 center">
-            <img class="icon" src="https://honnunarstadall.hi.is/sites/honnunarstadall.hi.is/files/styles/500_breidd/public/admin/Prentupplausn/Mappa4/pallas_athena_positivblue.jpg?itok=ZDjAmjIx" alt="Háskóli Íslands">
-          </div>
-          <div class="col-lg-3 vertical">
-            <p class="role">Natural Language Processing Engineer</p>
-            <p class="companyTitle">University of Iceland</p>
-            <p class="date">October 2020 - December 2020</p>
-          </div>
-          <div class="col-md">
-            <ul class="noMargin">
-              <li>Worked with Professor Hafsteinn Einarsson at the University of Iceland on his NLP model</li>
-              <li>Learned about various NLP structures including CNN, RNN, S2S, and Bert model transformers and how to implement them using PyTorch</li>
-              <li>Worked on fine turning Bert NER model used to identify "tech" words startups used to describe themselves</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <h2 class="generalTitle">Projects</h2>
-      <div class="container-fluid p-3 mb-5 bg-white rounded">
-        <div class="row shadow p-3">
-          <div class="col-lg-2 center">
-
-          </div>
-          <div class="col-lg-3 vertical">
-            <p class="role">Full Stack Developer</p>
-            <p class="companyTitle">Independent Photo Upload Project</p>
-            <p class="date">April 2020 - September 2020</p>
-          </div>
-          <div class="col-md">
-            <ul class="noMargin">
-              <li>Mentored project to create a web app that displays uploaded pictures using React and Express</li>
-              <li>Currently building out the API using mySQL</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="container-fluid p-3 mb-5 bg-white rounded">
-        <div class="row shadow p-3">
-          <div class="col-lg-2 center">
-            <img class="icon" src="resources/profile1.jpg" alt="Profile picture">
-
-          </div>
-          <div class="col-lg-3 vertical">
-            <p class="role">Web Developer</p>
-            <p class="companyTitle">jossduff.com</p>
-            <p class="date">January 2021</p>
-          </div>
-          <div class="col-md">
-            <ul class="noMargin">
-              <li>Simple one page website for readability</li>
-              <li>HTML, CSS, and Bootstrap</li>
             </ul>
           </div>
         </div>
@@ -193,9 +61,130 @@
       <h2 class="generalTitle">Skills</h2>
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <p>C, JavaScript, React, Express, Java, Python, HTML, CSS, Pytorch, MySql, Git, AWS Serverless, Slack</p>
+          <p>
+            <img src="resources/solidity.svg" class="icon">
+            <img src="resources/ethers.png" class="ethersIcon">
+            <img src="resources/hardhat.png" class="icon">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rust/rust-plain.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" class = "icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" class = "icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" class="icon"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/haskell/haskell-original-wordmark.svg" class="icon"/>
+          </p>
+          <p class="italic">(Solidity, Ethers.js, Hardhat, Rust, C, JavaScript, Git, HTML, CSS, Python, Java, MySQL, Haskell)</p>
         </div>
       </div>
+
+      <h2 class="generalTitle">Experience</h2>
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Software Engineer</p>
+            <p class="companyTitle"> <a href="https://nhi.lehigh.edu/">Nano Human Initiative</a>, Lehigh University</p>
+            <p class="date">January 2020 - September 2021</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Small undergraduate team lead by Lehigh’s Dr. Brian Chen to create a graphic user interface for remote control and viewing of electron microscopes. </li>
+              <li>Team leader of four assigned with the task of implementing a custom Python library developed by the manufacturer of Lehigh’s electron microscope into our existing website.</li>
+              <li>Developed 30+ pages of documentation on state-of-the-art Python library to control electron microscopes.</li>
+              <li>Communicated and worked with team located across various time zones.</li>
+              <li>Paid internship over the summer (40 hours/week).  Non-paid internship during the academic year (10 hours/week).</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="generalTitle">Projects</h2>
+      <div class="container-fluid p-3 mb-5 bg-white rounded shadow">
+        <div class="row p-3">
+
+          <div class="col-lg-4 vertical">
+            <p class="role">Solidity Developer</p>
+            <p class="companyTitle">JossToken</p>
+            <p class="date">September 2021 - Present</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Learned Solidity best practices to develop an ERC-20 token with unique token mechanics.</li>
+              <li>Deployed contract using Hardhat environment.</li>
+              <li>Implemented Ethers.js library to interact with the smart contract at jossduff.com.</li>
+              <li><a href="https://rinkeby.etherscan.io/address/0x068964E433e3D35C68cbA901aF3eDd4776107CF1#code">
+                Contract on Etherscan</a></li>
+            </ul>
+          </div>
+        </div>
+
+          <script type="module" src="scripts/token.js"></script>
+
+          <div class="row p-3">
+            <div class="col-lg-4 center">
+              <button onclick="myFunction()">Free JossToken</button>
+            </div>
+            <div class="col-lg vertical">
+              <label for="name">Leave a message: (70 character limit)</label>
+              <input type="text" id="name" name="name" required minlength="1" maxlength="70" size="10">
+              <button onclick="myFunction()">Post message</button>
+            </div>
+          </div>
+      </div>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Blockchain Developer</p>
+            <p class="companyTitle">Blockchain Data Structures</p>
+            <p class="date">October 2021 - Present</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Coding in Rust to create Merkle tree and block data structures to create a mock blockchain.</li>
+              <li><a href="https://github.com/JossDuff/blockchain-data-structures">
+                Github repo</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Full Stack Developer</p>
+            <p class="companyTitle">Buzz</p>
+            <p class="date">September 2021 - Present</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Worked with small team to develop message board application for software engineering class.</li>
+              <li>Practiced agile development with two-week sprints and SCRUM management.</li>
+              <li>Worked on the back end with Maven and Heroku, Android front end with Flutter, and as project manager.</li>
+              <li>Private repository.  Can show code upon request.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Web Developer</p>
+            <p class="companyTitle">jossduff.com</p>
+            <p class="date">January 2021</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>HTML, CSS, and Bootstrap</li>
+              <li>Ethers.js library for interacting with smart contract</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
     </div>
 
     <p>take me to the top</p>
