added bottom margin on icons to look nicer on mobile and added link to jossduff.com github repo under project description

--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
             <ul class="noMargin">
               <li>HTML, CSS, and Bootstrap</li>
               <li>Ethers.js library for interacting with smart contract</li>
+              <li><a href="https://github.com/JossDuff/JossDuff.github.io">
+                Github repo</a></li>
             </ul>
           </div>
         </div>
