added a button to go to top of page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="scripts/button.js"></script>
+    <script src="scripts/token.js"></script>
   </head>
   <body>
     <div class="container-fluid">
@@ -119,9 +121,6 @@
             </ul>
           </div>
         </div>
-
-          <script type="module" src="scripts/token.js"></script>
-
           <div class="row p-3">
             <div class="col-lg-4 center">
               <button onclick="myFunction()">Free JossToken</button>
@@ -178,19 +177,19 @@
           </div>
           <div class="col-md">
             <ul class="noMargin">
-              <li>HTML, CSS, and Bootstrap</li>
-              <li>Ethers.js library for interacting with smart contract</li>
+              <li>HTML, CSS, and Bootstrap.</li>
+              <li>Ethers.js library for interacting with smart contract.</li>
               <li><a href="https://github.com/JossDuff/JossDuff.github.io">
                 Github repo</a></li>
             </ul>
           </div>
         </div>
       </div>
-
     </div>
 
-    <p>take me to the top</p>
-    <p>Or keep scrolling for pictures of my dogs :)</p>
+    <div class="container-fluid center">
+      <button onclick="topFunction()" id="myBtn">Take me to the top</button>
+    </div>
 
   </body>
 </html>
