--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="intro">
               Hi!  Welcome to my page.  It's always under construction.
               <br>
-              I'm a Sophomore at
+              I'm a Junior at
               <a href="https://www1.lehigh.edu/">
               Lehigh University</a> pursuing a
               <a href="http://catalog.lehigh.edu/coursesprogramsandcurricula/interdisciplinaryundergraduatestudy/computerscienceandbusinessprogram/#text">
