--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
           <div class="row p-3">
             <div class="col-lg-4 center">
-              <button onclick="myFunction()">Free JossToken</button>
+              <button onclick="freeJossButton()" id="jossButton">Free JossToken</button>
             </div>
             <div class="col-lg vertical">
               <label for="name">Leave a message: (70 character limit)</label>
