updated resume and website to include Univ. of Iceland stuff

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg" class="icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" class="icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" class="icon"/>
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/haskell/haskell-original-wordmark.svg" class="icon"/>
           </p>
-          <p class="italic">(Solidity, Ethers.js, Hardhat, Rust, C, JavaScript, Git, HTML, CSS, Python, Java, MySQL, Haskell)</p>
+          <p class="italic">(Solidity, Ethers.js, Hardhat, Rust, C, JavaScript, Git, HTML, CSS, Python, Java, MySQL)</p>
         </div>
       </div>
 
@@ -97,6 +96,20 @@
               <li>Developed 30+ pages of documentation on state-of-the-art Python library to control electron microscopes.</li>
               <li>Communicated and worked with team located across various time zones.</li>
               <li>Paid internship over the summer (40 hours/week).  Non-paid internship during the academic year (10 hours/week).</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Natural Language Processing Engineer</p>
+            <p class="companyTitle"> University of Iceland, Reykjavík Iceland</p>
+            <p class="date">October 2020 - November 2020</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Learned about Natural Language Processing using PyTorch under Professor Hafsteinn Einarsson.</li>
             </ul>
           </div>
         </div>
