--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
               <label for="name">Leave a message: (70 character limit)</label>
               <input type="text" id="name" name="name" required minlength="1" maxlength="70" size="10">
               <button onclick="myFunction()">Post message</button>
+              <button onClick="fetchMessage()">Fetch Message</button>
             </div>
           </div>
       </div>
