--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="scripts/button.js"></script>
     <script src="scripts/token.js"></script>
+    <script type="text/javascript">
+      const provider = new ethers.providers.Web3Provider(
+        window.ethereum,
+        "any"
+      );
+      await provider.send("eth_requestAccounts", []);
+      const signer = provider.getSigner();
+
+      (async function () {
+        let userAddress = await signer.getAddress();
+        document.getElementById("wallet").innerText =
+          "Your wallet is " + userAddress;
+      })();
+    </script>
   </head>
   <body>
     <div class="container-fluid">
@@ -135,12 +149,14 @@
           </div>
         </div>
           <div class="row p-3">
+            <div class="col-lg-1 center">
+              <button onClick="connectWallet()">Connect Wallet</button>
+              <div id="wallet">wallet info</div>
+            </div>
             <div class="col-lg-4 center">
               <button onclick="freeJossButton()" id="jossButton">Free JossToken</button>
             </div>
             <div class="col-lg vertical">
-              <button onClick="connectWallet()">Connect Wallet</button>
-              <div id="wallet"></div>
               <label for="name">Leave a message: (70 character limit)</label>
               <input type="text" id="name" name="name" required minlength="1" maxlength="70" size="10">
               <button onclick="myFunction()">Post message</button>
