--- a/index.html
+++ b/index.html
@@ -7,26 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="scripts/button.js"></script>
-    <script src="scripts/token.js"></script>
-    <script
-      src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
-      type="application/javascript"
-    ></script>
-    <script>
-      const provider = new ethers.providers.Web3Provider(
-        window.ethereum,
-        "any"
-      );
-      await provider.send("eth_requestAccounts", []);
-      const signer = provider.getSigner();
-
-      (async function () {
-        let userAddress = await signer.getAddress();
-        document.getElementById("wallet").innerText =
-          "Your wallet is " + userAddress;
-      })();
-    </script>
+    <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
     <div class="container-fluid">
@@ -213,7 +194,7 @@
           </div>
           <div class="col-md">
             <ul class="noMargin">
-              <li>HTML, CSS, and Bootstrap.</li>
+              <li>HTML, CSS, Bootstrap, and Vue 3.</li>
               <li>Ethers.js library for interacting with smart contract.</li>
               <li><a href="https://github.com/JossDuff/JossDuff.github.io">
                 Github repo</a></li>
