moved around some image and css files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joss Duff</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="resources/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
@@ -63,9 +62,9 @@
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <p>
-            <img src="resources/solidity.svg" class="icon">
-            <img src="resources/ethers.png" class="ethersIcon">
-            <img src="resources/hardhat.png" class="icon">
+            <img src="resources/images/solidity.svg" class="icon">
+            <img src="resources/images/ethers.png" class="ethersIcon">
+            <img src="resources/images/hardhat.png" class="icon">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rust/rust-plain.svg" class="icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" class="icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
