updated with new jobs

--- a/index.html
+++ b/index.html
@@ -89,17 +89,58 @@
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" class="icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" class="icon"/>
+            <img src="resources/reach.svg" class="icon">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" class = "icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" class = "icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg" class="icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" class="icon"/>
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original-wordmark.svg" class="icon"/>
           </p>
-          <p class="italic">(Solidity, Ethers.js, Hardhat, Rust, C, JavaScript, Git, HTML, CSS, Python, Java, MySQL)</p>
+          <p class="italic">(Solidity, Ethers.js, Hardhat, Rust, C, JavaScript, Git, Reach, HTML, CSS, Python, Java, MySQL)</p>
         </div>
       </div>
 
       <h2 class="generalTitle">Experience</h2>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Lead Blockchain Developer</p>
+            <p class="companyTitle"><a href="https://www.chainbytes.com/">Chainbytes</a></p>
+            <p class="date">January 2022 - Present</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Verifying fair payment of wages to coffee laborers in El Salvador on the bitcoin 
+                blockchain for my capstone project.</li>
+              <li>Team of 4 mentored by Eric Grill, Chainbytes CEO and blokchain advisor to the president of El Salvador.</li>
+              <li>Created bitcoin sidechain using <a href="https://elementsproject.org/">Elements</a> to hold data objects.</li>
+              <li>Using Lightning Network for payments to coffee laborers</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Decentralized App Developer</p>
+            <p class="companyTitle"><a href="https://www.algorand.com/">Algorand</a></p>
+            <p class="date">January 2022 - Present</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Using Reach blockchain development platform to create a decentralized crowdfunding 
+                application on the Algorand blockchain.</li>
+              <li>Learned about developement on the Algorand blockchain with the Algorand community and docs.</li>
+              <li>Had weekly 1-on-1 meetings with Algorand developer advocate, Russ Fustino.</li>
+              <li><a href="https://github.com/JossDuff/reach-crowdfund">
+                Github repo</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
@@ -134,13 +175,15 @@
       </div>
 
       <h2 class="generalTitle">Projects</h2>
+
+
       <div class="container-fluid p-3 mb-5 bg-white rounded shadow">
         <div class="row p-3">
 
           <div class="col-lg-4 vertical">
             <p class="role">Solidity Developer</p>
             <p class="companyTitle">JossToken</p>
-            <p class="date">September 2021 - Present</p>
+            <p class="date">September 2021 - December 2021</p>
           </div>
           <div class="col-md">
             <ul class="noMargin">
@@ -172,26 +215,9 @@
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
-            <p class="role">Blockchain Developer</p>
-            <p class="companyTitle">Blockchain Data Structures</p>
-            <p class="date">October 2021 - Present</p>
-          </div>
-          <div class="col-md">
-            <ul class="noMargin">
-              <li>Coding in Rust to create Merkle tree and block data structures to create a mock blockchain.</li>
-              <li><a href="https://github.com/JossDuff/blockchain-data-structures">
-                Github repo</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="container-fluid p-3 mb-5 bg-white rounded">
-        <div class="row shadow p-3">
-          <div class="col-lg-4 vertical">
             <p class="role">Full Stack Developer</p>
             <p class="companyTitle">Buzz</p>
-            <p class="date">September 2021 - Present</p>
+            <p class="date">September 2021 - December 2021</p>
           </div>
           <div class="col-md">
             <ul class="noMargin">
@@ -221,6 +247,7 @@
           </div>
         </div>
       </div>
+
     </div>
 
     <div class="container-fluid center">
