Added organization section and a tab icon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="resources/snorlax.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joss Duff</title>
@@ -82,6 +83,7 @@
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <p>
+            <img src="resources/bulb.webp" alt="">
             <img src="resources/solidity.svg" class="icon">
             <img src="resources/ethers.png" class="ethersIcon">
             <img src="resources/hardhat.png" class="icon">
@@ -116,6 +118,7 @@
               <li>Team of 4 mentored by Eric Grill, Chainbytes CEO and blokchain advisor to the president of El Salvador.</li>
               <li>Created bitcoin sidechain using <a href="https://elementsproject.org/">Elements</a> to hold data objects.</li>
               <li>Using Lightning Network for payments to coffee laborers</li>
+              <li>Practiced scrum development with 1 week sprints and weekly spring reports outlining our progress.</li>
             </ul>
           </div>
         </div>
@@ -174,8 +177,46 @@
         </div>
       </div>
 
-      <h2 class="generalTitle">Projects</h2>
 
+      <h2 class="generalTitle">Organizations</h2>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">President</p>
+            <p class="companyTitle">Lehigh Cryptocurrency Club</p>
+            <p class="date">October 2021 - Present</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Coordinated with Lehigh University to re-instate inactive club.</li>
+              <li>Led educational discussion with students about blockchain and cryptocurrency topics.</li>
+              <li>Organized and planned club meetings and events.</li>
+              <li>Recruited 100+ members.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-4 vertical">
+            <p class="role">Member</p>
+            <p class="companyTitle"><a href="https://wordpress.lehigh.edu/sss/">Scalable Systems and Software 
+              Research Group, Lehigh University</a></p>
+            <p class="date">January 2021 - Present</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Attended weekly presentations advanced blockchain topics.</li>
+              <li>Shared and discussed blockchain technology news with professors and graduate students<./li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+
+      <h2 class="generalTitle">Projects</h2>
 
       <div class="container-fluid p-3 mb-5 bg-white rounded shadow">
         <div class="row p-3">
