fixed spelling mistakes and added updated resume

--- a/index.html
+++ b/index.html
@@ -108,17 +108,18 @@
         <div class="row shadow p-3">
           <div class="col-lg-4 vertical">
             <p class="role">Lead Blockchain Developer</p>
-            <p class="companyTitle"><a href="https://www.chainbytes.com/">Chainbytes</a></p>
+            <p class="companyTitle"><a href="https://www.chainbytes.com/">ChainBytes</a></p>
             <p class="date">January 2022 - Present</p>
           </div>
           <div class="col-md">
             <ul class="noMargin">
               <li>Verifying fair payment of wages to coffee laborers in El Salvador on the bitcoin 
                 blockchain for my capstone project.</li>
-              <li>Team of 4 mentored by Eric Grill, Chainbytes CEO and blokchain advisor to the president of El Salvador.</li>
-              <li>Created bitcoin sidechain using <a href="https://elementsproject.org/">Elements</a> to hold data objects.</li>
+              <li>Team of 4 mentored by Eric Grill, Chainbytes CEO and blockchain advisor to the president of El Salvador.</li>
+              <li>Experienced a fluid and exploratory development environment that involved lots of problem solving.</li>
+              <li>Created bitcoin sidechain using <a href="https://elementsproject.org/">Elements</a> to hold data objects representing the state of coffee on the supply chain.</li>
               <li>Using Lightning Network for payments to coffee laborers</li>
-              <li>Practiced scrum development with 1 week sprints and weekly spring reports outlining our progress.</li>
+              <li>Practiced scrum development with 1 week long sprints and weekly sprint reports documenting our progress.</li>
             </ul>
           </div>
         </div>
@@ -133,9 +134,9 @@
           </div>
           <div class="col-md">
             <ul class="noMargin">
-              <li>Using Reach blockchain development platform to create a decentralized crowdfunding 
+              <li>Taught myself how to use the Reach blockchain development platform to create a decentralized crowdfunding 
                 application on the Algorand blockchain.</li>
-              <li>Learned about developement on the Algorand blockchain with the Algorand community and docs.</li>
+              <li>Learned about development on the Algorand blockchain with the Algorand community and docs.</li>
               <li>Had weekly 1-on-1 meetings with Algorand developer advocate, Russ Fustino.</li>
               <li><a href="https://github.com/JossDuff/reach-crowdfund">
                 Github repo</a></li>
