Updated to hide outdated projects

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </div>
         <div class="col-lg-4">
             <p class="intro">
-              Hi!  Welcome to my page.  It's always under construction.
-              <br>
-              I'm a Junior at
+              Hi!  Welcome to my page.  I need to update it with my current projects so for now I'm using it as a hub for all my links.
+              <br><br>
+              I'm a Senior at
               <a href="https://www1.lehigh.edu/">
               Lehigh University</a> pursuing a
               <a href="http://catalog.lehigh.edu/coursesprogramsandcurricula/interdisciplinaryundergraduatestudy/computerscienceandbusinessprogram/#text">
-              B.S. in Computer Science and Business</a>.  I love learning about anything relating to blockchain technologies.  You can reach me at jod323@lehigh.edu.
+              B.S. in Computer Science and Business</a>.  I love learning about anything relating to blockchain technology.  You can reach me at jod323@lehigh.edu.
               <br>
               <a href="https://github.com/JossDuff/">github</a>
               <a href="https://www.linkedin.com/in/joss-duff-305670200/">linkedin</a>
@@ -52,7 +52,7 @@
         </div>
       </div>
     </div>
-
+<!--
     <div class="container-md">
 
       <h2 class="generalTitle">Education</h2>
@@ -68,12 +68,14 @@
           <div class="col-md">
             <p class="noMargin bold">Relevant Classes</p>
             <ul class="noMargin">
-              <li>Blockchain in Algorithms and Systems</li>
+              <li>Blockchain Algorithms and Systems</li>
               <li>Blockchain Concepts and Applications</li>
               <li>Database Systems and Applications</li>
-              <li>Programming & Data Structures</li>
+              <li>Operating System Design</li>
+              <li>Design and Analysis of Algorithms</li>
               <li>Software Engineering</li>
               <li>Systems Software</li>
+              <li>Game Theory</li>
             </ul>
           </div>
         </div>
@@ -295,6 +297,6 @@
     <div class="container-fluid center">
       <button onclick="topFunction()">Take me to the top</button>
     </div>
-
+  -->
   </body>
 </html>
